--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,18 @@ body {
 .term:focus {
   background-color: rgb(228, 228, 211);
 }
+
+button {
+  padding: 8px;
+  border-radius: 3px;
+  border: 1px solid black;
+  background-color: rgb(162, 160, 160);
+  color: black;
+  margin-left: 10px;
+}
+
+button:hover {
+  background-color: rgb(113, 110, 110);
+  color: white;
+  border: 1px solid whitesmoke;
+}
